--- a/src/cascadia/TerminalSettingsEditor/Profiles_Base.xaml
+++ b/src/cascadia/TerminalSettingsEditor/Profiles_Base.xaml
@@ -106,7 +106,6 @@
                                     HasSettingValue="{x:Bind Profile.HasIcon, Mode=OneWay}"
                                     SettingOverrideSource="{x:Bind Profile.IconOverrideSource, Mode=OneWay}"
                                     Style="{StaticResource ExpanderSettingContainerStyleWithComplexPreview}">
-                <!--  TODO CARLOS: figure out way to display "none" instead of preview  -->
                 <local:SettingContainer.CurrentValueTemplate>
                     <DataTemplate x:DataType="local:ProfileViewModel">
                         <Grid>
@@ -119,15 +118,22 @@
                                        VerticalAlignment="Center"
                                        FontFamily="Segoe UI, Segoe Fluent Icons, Segoe MDL2 Assets"
                                        Style="{StaticResource SettingsPageItemDescriptionStyle}"
-                                       Text="{x:Bind Icon, Mode=OneWay}"
+                                       Text="{x:Bind LocalizedIcon, Mode=OneWay}"
                                        Visibility="{x:Bind mtu:Converters.BooleanToVisibility(UsingNoIcon), Mode=OneWay}" />
                         </Grid>
                     </DataTemplate>
                 </local:SettingContainer.CurrentValueTemplate>
                 <local:SettingContainer.Content>
-                    <StackPanel Spacing="10">
+                    <Grid ColumnSpacing="10">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="auto" />
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="auto" />
+                        </Grid.ColumnDefinitions>
+
                         <!--  Icon Type  -->
                         <ComboBox x:Uid="Profile_IconType"
+                                  Grid.Column="0"
                                   ItemsSource="{x:Bind Profile.IconTypes}"
                                   SelectedItem="{x:Bind Profile.CurrentIconType, Mode=TwoWay}">
                             <ComboBox.ItemTemplate>
@@ -139,6 +145,7 @@
 
                         <!--  Built-In Icon  -->
                         <ComboBox x:Uid="Profile_BuiltInIcon"
+                                  Grid.Column="1"
                                   ItemsSource="{x:Bind Profile.BuiltInIcons}"
                                   SelectedItem="{x:Bind Profile.CurrentBuiltInIcon, Mode=TwoWay}"
                                   Visibility="{x:Bind Profile.UsingBuiltInIcon, Mode=OneWay}">
@@ -161,27 +168,34 @@
                             </ComboBox.ItemTemplate>
                         </ComboBox>
 
-                        <!--  Image Icon  -->
-                        <StackPanel Visibility="{x:Bind Profile.UsingImageIcon, Mode=OneWay}">
-                            <TextBox x:Uid="Profile_IconBox"
-                                     FontFamily="Segoe UI, Segoe Fluent Icons, Segoe MDL2 Assets"
-                                     IsSpellCheckEnabled="False"
-                                     Style="{StaticResource TextBoxSettingStyle}"
-                                     Text="{x:Bind Profile.Icon, Mode=TwoWay}" />
-                            <Button x:Uid="Profile_IconBrowse"
-                                    Margin="0,10,0,0"
-                                    Click="Icon_Click"
-                                    Style="{StaticResource BrowseButtonStyle}" />
-                        </StackPanel>
+                        <!--  Image (File) Icon  -->
+                        <TextBox x:Uid="Profile_IconBox"
+                                 Grid.Column="1"
+                                 MaxWidth="Infinity"
+                                 HorizontalAlignment="Stretch"
+                                 FontFamily="Segoe UI, Segoe Fluent Icons, Segoe MDL2 Assets"
+                                 IsSpellCheckEnabled="False"
+                                 Style="{StaticResource TextBoxSettingStyle}"
+                                 Text="{x:Bind Profile.Icon, Mode=TwoWay}"
+                                 Visibility="{x:Bind Profile.UsingImageIcon, Mode=OneWay}" />
+                        <Button x:Uid="Profile_IconBrowse"
+                                Grid.Column="2"
+                                Margin="0"
+                                VerticalAlignment="Top"
+                                Click="Icon_Click"
+                                Style="{StaticResource BrowseButtonStyle}"
+                                Visibility="{x:Bind Profile.UsingImageIcon, Mode=OneWay}" />
 
                         <!--  Emoji Icon  -->
                         <TextBox x:Uid="Profile_IconEmojiBox"
+                                 Grid.Column="1"
+                                 MaxWidth="Infinity"
                                  FontFamily="Segoe UI, Segoe Fluent Icons, Segoe MDL2 Assets"
                                  IsSpellCheckEnabled="False"
                                  Style="{StaticResource TextBoxSettingStyle}"
                                  Text="{x:Bind Profile.CurrentEmojiIcon, Mode=TwoWay}"
                                  Visibility="{x:Bind Profile.UsingEmojiIcon, Mode=OneWay}" />
-                    </StackPanel>
+                    </Grid>
                 </local:SettingContainer.Content>
             </local:SettingContainer>
 
