--- a/src/cascadia/TerminalSettingsEditor/AISettings.xaml
+++ b/src/cascadia/TerminalSettingsEditor/AISettings.xaml
@@ -40,7 +40,8 @@
                            Style="{StaticResource TextBlockSubHeaderStyle}" />
                 <!--  Github Copilot  -->
                 <local:SettingContainer x:Uid="AISettings_GithubCopilot"
-                                        Style="{StaticResource ExpanderSettingContainerStyle}">
+                                        Style="{StaticResource ExpanderSettingContainerStyle}"
+                                        Visibility="{x:Bind ViewModel.GithubCopilotFeatureEnabled}">
                     <StackPanel>
                         <Grid Visibility="{x:Bind ViewModel.AreGithubCopilotTokensSet, Mode=OneWay}">
                             <Grid.ColumnDefinitions>
