registry check works and settings UI follows

--- a/src/cascadia/TerminalSettingsEditor/AISettings.xaml
+++ b/src/cascadia/TerminalSettingsEditor/AISettings.xaml
@@ -41,7 +41,7 @@
                 <!--  Github Copilot  -->
                 <local:SettingContainer x:Uid="AISettings_GithubCopilot"
                                         Style="{StaticResource ExpanderSettingContainerStyle}"
-                                        Visibility="{x:Bind ViewModel.GithubCopilotFeatureEnabled}">
+                                        Visibility="{x:Bind ViewModel.GithubCopilotAllowed}">
                     <StackPanel>
                         <Grid Visibility="{x:Bind ViewModel.AreGithubCopilotTokensSet, Mode=OneWay}">
                             <Grid.ColumnDefinitions>
@@ -124,7 +124,8 @@
                 </local:SettingContainer>
                 <!--  Azure OpenAI  -->
                 <local:SettingContainer x:Uid="AISettings_AzureOpenAIKeyAndEndpoint"
-                                        Style="{StaticResource ExpanderSettingContainerStyle}">
+                                        Style="{StaticResource ExpanderSettingContainerStyle}"
+                                        Visibility="{x:Bind ViewModel.AzureOpenAIAllowed}">
                     <StackPanel>
                         <Grid Visibility="{x:Bind ViewModel.AreAzureOpenAIKeyAndEndpointSet, Mode=OneWay}">
                             <Grid.ColumnDefinitions>
@@ -242,7 +243,8 @@
                 </local:SettingContainer>
                 <!--  OpenAI  -->
                 <local:SettingContainer x:Uid="AISettings_OpenAIKey"
-                                        Style="{StaticResource ExpanderSettingContainerStyle}">
+                                        Style="{StaticResource ExpanderSettingContainerStyle}"
+                                        Visibility="{x:Bind ViewModel.OpenAIAllowed}">
                     <StackPanel>
                         <Grid Visibility="{x:Bind ViewModel.IsOpenAIKeySet, Mode=OneWay}">
                             <Grid.ColumnDefinitions>
