lock icon, grey out

--- a/src/cascadia/TerminalSettingsEditor/AISettings.xaml
+++ b/src/cascadia/TerminalSettingsEditor/AISettings.xaml
@@ -41,7 +41,8 @@
                 <!--  GitHub Copilot  -->
                 <local:SettingContainer x:Uid="AISettings_GithubCopilot"
                                         Style="{StaticResource ExpanderSettingContainerStyle}"
-                                        Visibility="{x:Bind ViewModel.GithubCopilotAllowed}">
+                                        IsEnabled="{x:Bind ViewModel.GithubCopilotAllowed}"
+                                        CurrentValue="{x:Bind ViewModel.GithubCopilotStatus, Mode=OneWay}">
                     <StackPanel>
                         <Grid Visibility="{x:Bind ViewModel.AreGithubCopilotTokensSet, Mode=OneWay}">
                             <Grid.ColumnDefinitions>
@@ -125,7 +126,8 @@
                 <!--  Azure OpenAI  -->
                 <local:SettingContainer x:Uid="AISettings_AzureOpenAIKeyAndEndpoint"
                                         Style="{StaticResource ExpanderSettingContainerStyle}"
-                                        Visibility="{x:Bind ViewModel.AzureOpenAIAllowed}">
+                                        IsEnabled="{x:Bind ViewModel.AzureOpenAIAllowed}"
+                                        CurrentValue="{x:Bind ViewModel.AzureOpenAIStatus, Mode=OneWay}">
                     <StackPanel>
                         <Grid Visibility="{x:Bind ViewModel.AreAzureOpenAIKeyAndEndpointSet, Mode=OneWay}">
                             <Grid.ColumnDefinitions>
@@ -244,7 +246,8 @@
                 <!--  OpenAI  -->
                 <local:SettingContainer x:Uid="AISettings_OpenAIKey"
                                         Style="{StaticResource ExpanderSettingContainerStyle}"
-                                        Visibility="{x:Bind ViewModel.OpenAIAllowed}">
+                                        IsEnabled="{x:Bind ViewModel.OpenAIAllowed}"
+                                        CurrentValue="{x:Bind ViewModel.OpenAIStatus, Mode=OneWay}">
                     <StackPanel>
                         <Grid Visibility="{x:Bind ViewModel.IsOpenAIKeySet, Mode=OneWay}">
                             <Grid.ColumnDefinitions>
